If searchbox has focus, don't open sidebar on hover

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -919,6 +919,7 @@ $(function(){
     $("body").on("mouseover",".ca_displayIcon,.infoButton,.displayIcon,.card_readmore",function() {
       var icon = this;
       iconHoverTimer = setTimeout(function() {
+        if ( !$("#searchBox").is(":focus") )
         icon.click();
       },3000);
     });
