--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -196,7 +196,17 @@ $noMenu += $themeOffset;
     height: 55.5rem !important;
   }
   .maxPerPage {
+    position: relative;
+  }
+  .dockerSearch,
+  .templateSearch {
+    position: relative;
+  }
+  .dockerSearchNote {
     display: none;
+  }
+  .maxPerPage {
+    display:none !important;
   }
 }
 
@@ -476,7 +486,7 @@ $(function(){
 
   $('body').keydown(function(e) {
     if ( $("#alternateView").is(":visible") ) {
-      $("#alternateView").hide();
+      hideAlternateView();
       return;
     }
     if ( $(".sidenav").hasClass("sidenavShow") ) {
@@ -840,7 +850,8 @@ $(function(){
     }
   });
 
-  $(".initDockerSearch").click(function()     { initDockerSearch(); });
+  $(".dockerSearch").click(function()         { initDockerSearch(); });
+  $(".similarSearch").click(function()        { doSearch(false,$(this).data("similarSearch")); });
   $(".multi_installClear").click(function()   { clearMultiInstall(); });
   $(".multi_deleteButton").click(function()   { deleteMulti(); });
   $(".multi_installAll").click(function()     { selectAllPrevious(); enableMultiInstall(); });
@@ -889,7 +900,11 @@ $(function(){
   });
 
   $("#alternateView").on("click",function() {
-    $("#alternateView").hide();
+    hideAlternateView();
+  });
+
+  $("body").on("click",".similarSearch",function() {
+    doSearch(false,$(this).data("search")); 
   });
 
   $("body").on("click",".removeApp",function() {
@@ -1336,6 +1351,7 @@ function closeSidebar(cookie=false,visible=false) {
   context.destroy("#actionsPopup");
 
   $(".sidenav").removeClass("sidenavShow").addClass("sidenavHide");
+  $(".ca_display_area").removeClass("dim");
   $("#sidenavContent").html("");
   $(".back_to_top,.move_to_end").removeClass("back_to_top_hide");
   $("body").removeClass("body_sidebarScroll");
@@ -2325,25 +2341,36 @@ function restoreState() {
   });
 
 }
+function showAlternateView() {
+  $("#alternateView").show();
+  $("body").addClass("body_sidebarScroll");
+  $("body").css("overflow","hidden !important");
+}
+
+function hideAlternateView() {
+  $("#alternateView").hide();
+  $("body").removeClass("body_sidebarScroll");
+  $("body").css("overflow","auto !important");
+}
 
 function showCredits() {
-  $("#alternateView").show();
+  showAlternateView();
   var credits = $('#caCredits').html();
   $("#alternateView").html(credits);
 }
 
 function showStatistics() {
-  $("#alternateView").show();
+  showAlternateView();
   post({action:'statistics'},function(result) {
     $("#alternateView").html(result.statistics);
   });
 }
 
 function caChangeLog() {
-  $(".multi_installDiv,.dockerSearch").hide();
+  showAlternateView();
   clearCategory(); clearSearchBox();
   post({action:'caChangeLog'},function(result) {
-    updateDisplay(result.changelog);
+    $("#alternateView").html(result.changelog);
   });
 }
 
@@ -2825,6 +2852,7 @@ function showSidebarApp(apppath,appname) {
   $(".sidebar").fadeIn();
   $(".back_to_top,.move_to_end").addClass("back_to_top_hide");
   $(".sidenav").removeClass("sidenavHide").addClass("sidenavShow");
+  $(".ca_display_area").addClass("dim");
   setTimeout(function() {
     post({action:'getPopupDescription',appName:appname,appPath:apppath},function(result) {
       $("#sidenavContent").html(result.description);
@@ -2927,6 +2955,7 @@ function showRepoPopup(repository) {
   $("#sidenavContent").html("");
 
   $(".sidenav").removeClass("sidenavHide").addClass("sidenavShow");
+  $(".ca_display_area").addClass("dim");
   $(".sidebar").fadeIn();
   $("body").addClass("body_sidebarScroll");
   $("body").css("overflow","hidden !important");
