don't show docker search on repo searches

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1214,12 +1214,13 @@ function doSearch(button,newSearch) {
     return;
   }
   data.searchActive = true;
+
   if ( ! dockerNotEnabled && (filter.indexOf(" Repository") < 1) ) {
     $('.dockerSearch').show();
     $('.dockerSearchTemplate').hide();
   } else {
     $('.dockerSearch').hide();
-    $('.dockerSearchTemplate').show();
+    $('.dockerSearchTemplate').hide();
   }
 
   data.searchInProgress = true;
