--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
@@ -1032,7 +1032,7 @@ li.debugging {
 
 i.displayIcon {
   font-size: 5.5rem;
-  color: #626868; var
+  color: #626868;
   padding-top: 0.25rem;
 }
 
