--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1069,6 +1069,9 @@ function showSortIcons() {
   $("#sortIconArea").show();
 }
 function ca_openPlugin(cmd,title,plg,func) {
+  if ( cmd.startsWith("plugin install") ) {
+    cmd = "downloadPlugin "+cmd;
+  }
   setTimeout(function(){openPlugin(cmd,title,plg,func,"");},250);
 }
 
